<resources>
    <string name="app_name">OpenWLANMap</string>
    <string name="settings">Settings</string>
    <string name="user">User page</string>
    <string name="map">Current total map</string>
    <string name="news">News</string>
    <string name="ranking">Ranking</string>
    <string name="help">Help center</string>
    <string name="contribute">Bug report</string>
    <string name="rate">Rate app</string>
    <string name="share">Rate/Share app</string>
    <string name="close">Close nav</string>
    <string name="open">Open nav</string>
    <string name="openwifi">\@Power by openwifi.su</string>
    <string name="setting_general">GENERAL SETTINGS</string>
    <string name="setting_resource">RESOURCES SETTINGS</string>
    <string name="setting_start_mode">Start mode</string>
    <string name="setting_upload_mode">Upload mode</string>
    <string name="setting_autoconnect">Autoconnect to openwifi and upload data</string>
    <string name="setting_min_rssi">Minimum RSSI allowed</string>
    <string name="setting_battery">Kill application if battery is lower than</string>
    <string name="kill_ap_no_gps">Kill application if there is no location defined after</string>
    <string name="setting_brightness">Reduce brightness</string>
    <string name="setting_user">ACCOUNT SETTINGS</string>
    <string name="setting_autoconnect_freifunk">Autoconnect to freifunk and upload data</string>
    <string name="names">Your team\'s identifier (12 characters) </string>
    <string name="gps_pop_up">This app requires GPS to work! Please allow permission</string>
    <string name="enable_gps">Please enable GPS!</string>
    <string name="gps_pop_up_ok">You allowed GPS permission</string>
    <string name="setting_import">Import account</string>
    <string name="setting_export">Export account</string>
    <string name="setting_reset">Reset settings</string>
    <string name="bssid">bssid</string>
    <string name="ssid">ssid</string>
    <string name="rssid">rssid</string>
    <string name="timestamp">first seen</string>
    <string name="frequency">Frequency</string>
    <string name="channel">channel</string>
    <string name="capabilities">capabilities</string>
    <string name="no_ap">0ops! No AP in list</string>
    <string name="speed">Speed:</string>
    <string name="setting_show_counter">Show big number of scanned AP in background</string>
    <string name="setting_project">PROJECT SETTINGS</string>
    <string name="h_rank">Rank:</string>
    <string name="c_rank">unknown</string>
    <string name="h_gps">GPS:</string>
    <string name="c_gps">Waiting for signal...</string>
    <string name="h_scan">Scan service:</string>
    <string name="c_scan">Scanning ...</string>
    <string name="h_api_total">APs Total in DB:</string>
    <string name="h_newest_scan">Newest scan:</string>
    <string name="lat">latitude</string>
    <string name="longitude">Longitude</string>
    <string name="setting_support_project">Projects to be supported</string>
    <string name="setting_summary">Show in summary</string>
    <string name="exist">Kill the application and exist?</string>
    <string name="yes">Exist</string>
    <string name="cancel">Cancel</string>
    <string name="setting_list">Show in access point list</string>
    <string name="stopped">Stopped</string>
    <string name="closeDialog">CLOSE</string>
    <string name="uploading">Uploading...</string>
    <string name="upCount">Uploaded count =</string>
    <string name="upRank">Uploaded rank =</string>
    <string name="upNewAp">New aps =</string>
    <string name="upUpdAp">Updated aps =</string>
    <string name="upDelAp">Deleted aps =</string>
    <string name="upNewPoint">Point gained =</string>
    <string name="point">points</string>
    <string name="upload_under_limit">Upload can only be processed with at least 250 access points.</string>
    <string name="setting_show_bssid">Show own identifier</string>
    <string name="ownbssid">This number identifies a team. In case you have other members in team, please follow them this. All team members have to set it up in settings!</string>
    <string name="error_ownbssid">Could not get your identifier!</string>
    <string name="team_tag">Highscore tag(next to your rank in openwifi.su)</string>
    <string name="setting_team">Member of a team</string>
    <string name="setting_public_data">Public your data in openwifi.su</string>
    <string name="setting_map">Using map instead of access point list</string>
    <string name="adaptive_scanning">Adaptive scanning</string>
    <string name="adaptive_info">Scale scanning period dynamically to save resources by detecting movement with sensor, speed etc.</string>
    <string name="setting_public_data_info">Allow other to download your data from openwifi.su</string>
    <string name="setting_public_map">Show your map data in openwifi.su</string>
    <string name="alert_kill">Kill openwlanmap app on critical resources :(</string>
    <string name="setting_upload_count">Automatic upload on</string>
    <string name="overlay_color"><![CDATA[
        blue if gps is available
        \nred if libwlocate is used
        \nblack if no location method is defined
  ]]></string>
    <string name="autoconnect_info">WARNING! This option is dangerous and should only be chosen on device with high security.</string>
    <string name="map_info">A map of your data will be created and published next to your rank in openwifi.su</string>
    <string name="team_info"><![CDATA[
        If you are a team member/leader, be sure to set your team\'s identifier. This team identifier should be the leader\'s own identifier, which can be found in menu.
    ]]></string>
    <string name="wrong_id_format">ERROR! The identifier should contain 12 digits in hex like a mac address. A wrong identifier will prevent you from uploading your data to your team.</string>
    <string name="connect_error">ERROR! Connection might be broken!</string>
    <string name="upload_error">Failed with</string>
    <string name="wrong_id_msg">ERROR! You might set your team\'s identifier incorrectly!</string>
    <string name="import_error">ERROR! Something wrong happened while importing account data.</string>
    <string name="import_ok">Your account is imported sucessfully.</string>
    <string name="export_error">ERROR! Something wrong happened while exporting account data.</string>
    <string name="export_ok">Your account is exported sucessfully.</string>
    <string name="reset_alert">Settings is reseted sucessfully.</string>
    <string name="recheck">RECHECK</string>
    <string name="upload">UPLOAD</string>
    <string name="upload_process">Upload in process...</string>
    <string name="upload_sum">UPLOAD SUMMARY</string>
    <string name="upload_m">Uploading</string>
    <string name="ok">OK</string>
    <string name="newRank">NEW RANK</string>
    <string name="your_rank_header">Your\'s rank:</string>
    <string name="usermap">User\'s map</string>
    <string name="map_loading_error">Something wrong happened while trying to load your map! :(</string>
    <string name="no_connection">There is no internet connection :(</string>
</resources>
