<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="su.openwifi.openwlanmap.AccessPointActivity"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/FieldStyle"
            android:text="@string/lat"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/ap_latitude"
            style="@style/ContentStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/FieldStyle"
            android:text="@string/longitude"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/ap_longitude"
            style="@style/ContentStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/FieldStyle"
            android:text="@string/timestamp"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/ap_timestamp"
            style="@style/ContentStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/FieldStyle"
            android:text="@string/bssid"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/ap_bssid"
            style="@style/ContentStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/FieldStyle"
            android:text="@string/ssid"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/ap_ssid"
            style="@style/ContentStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/FieldStyle"
            android:text="@string/rssid"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/ap_rssid"
            style="@style/ContentStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/FieldStyle"
            android:text="@string/frequency"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/ap_frequency"
            style="@style/ContentStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/FieldStyle"
            android:text="@string/channel"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/ap_channel"
            style="@style/ContentStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/FieldStyle"
            android:text="@string/capabilities"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/ap_capabilities"
            style="@style/ContentStyle" />
    </LinearLayout>

</LinearLayout>
